# minishare

./: .AGENTS.md.swp  .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml  run.py
minishare/: .share.py.swp  API.md  __init__.py  __main__.py  cli.py  hashpw.py  share.py
tests/: test_minishare.py
